--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Jian Li"
 title_separator          : "-"
 name                     : &name "Jian Li"
-description              : &description "PhD student in Machine Learning. Institute of Information Engineering, CAS"
+description              : &description "Researcher in Machine Learning. Institute of Information Engineering, CAS"
 url                      : https://superlj666.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "superlj666/superlj666.github.io"
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Jian Li"
   avatar           : "avatar.png" # "jianli.jpg" #
-  bio              : "PhD student in Machine Learning. Institute of Information Engineering, CAS"
+  bio              : "Researcher in Machine Learning. Institute of Information Engineering, CAS"
   location         : "Beijing, China"
   employer         : 
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=IAJpTqYAAAAJ"
