--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "superlj666"
+  linkedin         : # "superlj666"
   orcid            : 
   pinterest        :
   soundcloud       :
