update about page

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ author:
   avatar           : "avatar.png" # "jianli.jpg" #
   bio              : "Tenure-track Senior Researcher at Institute of Information Engineering, CAS"
   location         : "Beijing, China"
-  employer         : 
+  employer         : "Institute of Information Engineering, CAS"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=IAJpTqYAAAAJ"
   email            : "superlj666@gmail.com"
   uri              : 
