--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ author:
   name             : "Jian Li (李健)"
   avatar           : "avatar.png" # "jianli.jpg" #
   bio              : "Tenure-track Senior Researcher at Institute of Information Engineering, CAS"
-  location         : "Beijing, China"
-  employer         : "Institute of Information Engineering, CAS"
+  # location         : "Beijing, China"
+  employer         : "IIE, CAS"
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=IAJpTqYAAAAJ"
   email            : "superlj666@gmail.com"
   uri              : 
