--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   #- title: "My Lab"
   #  url: /lab/
   
-  - title: "CV&Contact"
-    url: /cv&contact/  
+  # - title: "CV&Contact"
+  #   url: /cv&contact/  
 
   # - title: "Blogs"
   #   url: /year-archive/
