update Chinese information

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Chinese"
+  - title: "中文介绍"
     url: /chinese/  
 
   # - title: "Awards & Honors"
