--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   bio              : "Tenure-track Senior Researcher at Institute of Information Engineering, CAS"
   # location         : "Beijing, China"
   employer         : "IIE, CAS"
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=IAJpTqYAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=IAJpTqYAAAAJ&view_op=list_works&sortby=pubdate"
   email            : "superlj666@gmail.com"
   uri              : 
   bitbucket        :
