--- a/_config.yml
+++ b/_config.yml
@@ -80,11 +80,11 @@ author:
   name             : "Jian Li (李健)"
   avatar           : "avatar.png" # "jianli.jpg" #
   bio              : "Tenure-track Senior Researcher at Institute of Information Engineering, CAS"
-  # location         : "Beijing, China"
+  location         : "Beijing, China"
   employer         : "IIE, CAS"
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=IAJpTqYAAAAJ&view_op=list_works&sortby=pubdate"
   email            : "superlj666@gmail.com"
-  uri              : 
+  uri              : "https://people.ucas.ac.cn/~iielijian"
   bitbucket        :
   codepen          :
   dribbble         :
