--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   instagram        : 
   lastfm           :
   linkedin         : # "superlj666"
-  orcid            : 
+  orcid            : "http://orcid.org/0000-0003-4977-1802"
   pinterest        :
   soundcloud       :
   stackoverflow    : # https://stackoverflow.com/users/123456/username
