--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "avatar.png" # "jianli.jpg" #
   bio              : "Associate Senior Researcher at Institute of Information Engineering, CAS"
   location         : "Beijing, China"
-  employer         : "IIE, CAS"
+  # employer         : "IIE, CAS"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=IAJpTqYAAAAJ&view_op=list_works&sortby=pubdate"
   email            : "superlj666@gmail.com"
