--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   # employer         : "IIE, CAS"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=en-us&user=IAJpTqYAAAAJ&view_op=list_works&sortby=pubdate"
-  email            : "superlj666@gmail.com"
+  email            : "me@lijian.ac.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "https://people.ucas.ac.cn/~iielijian"
   bitbucket        :
