--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Gang Li"
 title_separator          : "-"
 name                     : &name "Gang Li"
 description              : &description "Ph.D. candidate at Institute of Software, Chinese Academy of Sciences"
-url                      : https://superlj666.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://ucasligang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "superlj666/superlj666.github.io"
+repository               : "ucasligang/ucasligang.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
