--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   # employer         : "IIE, CAS"
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=StWrqHIAAAAJ&hl=en"
-  email            : "ucasligangA.T.gmail.com"
+  email            : "ucasligang[a.t.]gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              : "https://ucasligang.github.io/"
   bitbucket        :
